// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/instagram single reel Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "18243350563184704",
    "url": "https://www.instagram.com/reel/CiS2vkVtyAe/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single reel RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "17950798184136322",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17949132197290443",
    "url": "https://www.instagram.com/p/CiS2qe5tXYn/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "17933650889306168",
  },
}
`;
